--- a/styles/register.css
+++ b/styles/register.css
@@ -13,8 +13,8 @@ body {
 h2 {
     text-align: center;
     font-weight: 500;
-    font-size: 35px;
-    color: #666;
+    font-size: 40px;
+    color: #777;
     margin: 8px;
 }
 
@@ -83,6 +83,7 @@ h2 {
 
 #register-form-section {
     margin-top: 20px;
+    margin-bottom: 80px;
 }
 
 #register-form-section p{
@@ -117,15 +118,18 @@ h2 {
     color: #F8F8F8;
     border: none;
     padding: 10px 15px;
+    font-size: 16px;
 }
 
 .submit-form input[type="submit"]:hover {
     background-color: #3A7ECA;
     padding: 10px 15px;
+    font-size: 16px;
 }
 
 footer {
-    background-color: #232421;
+    padding: 2px 0;
+    background-color: #21051F;
 }
 
 #text-footer {
