--- a/styles/index.css
+++ b/styles/index.css
@@ -7,7 +7,7 @@ body {
     font-family: Arial, Helvetica, sans-serif;
     font-weight: normal;
     font-style: normal;
-    background-color: #F8F8F8;
+    background-color: #21051F;
 }
 
 .main-header {
