--- a/views/create-campaign.html
+++ b/views/create-campaign.html
@@ -1,31 +1,33 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="en">
 <head>
     <title>AJuDE | Crowdfunding</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="keywords" content="crowdfunding, doação, vaquinha">
     <meta name="keywords" content="Uma plataforma de crowdfunding gratuita feita para você!">
-    <link rel="stylesheet" type="text/css" href="./styles/index.css">
+    <link rel="stylesheet" href="../styles/create-campaign.css">
+    <script src="../services/userService.js" type="module"></script>
 </head>
 <body>
+    <!-- NAVBAR -->
     <header class="main-header">
         <nav id="navbar">
             <ul>
                 <li>
-                    <a href="index.html">inicio</a>
+                    <a href="../index.html">inicio</a>
                 </li>
                 <li> 
-                    <a href="./views/campaigns.html">campanhas</a> 
+                    <a href="./campaigns.html">campanhas</a> 
                 </li>
                 <li> 
-                    <a href="./views/register.html">criar conta</a>
+                    <a href="./register.html">criar conta</a>
                 </li>
                 <li> 
-                    <a href="./views/login.html">login</a>
+                    <a href="./login.html">login</a>
                 </li>
                 <li>
-                    <a href="./views/create-campaign.html">lançar campanha</a>
+                    <a href="./create-campaign.html">lançar campanha</a>
                 </li>
             </ul>
         </nav>
@@ -33,26 +35,15 @@
     <div id="aux-div">
         <br>
     </div>
-    <!-- WALLPAPER -->
-    <section id="wallpaper-section">
-        <div id="wallpaper-div">
-            <img src="./styles/img/wallpaper2.jpg" alt="" height="250px">
-            <a href="./views/campaigns.html">Buscar campanha</a>
+
+    <!-- FORMULÁRIO -->
+    <section id="register-form-section">
+        <div id="container-login">
+            <h2>Cadastrar campanha</h2>
+            
         </div>
     </section>  
-
-    <!-- LANCE SUA CAMPANHA -->
-    <section id="launch-section">
-        <div id="launch-div">
-            <button>Lance sua campanha</button>
-        </div>
-    </section>
-
-    <!-- CAMPANHAS ATIVAS -->
-    <section id="campaigns-section">
-        <h2>Campanhas</h2>
-    </section>
-
+    
     <!-- RODAPÉ -->
     <footer class="center-footer">
         <div class="sub-footer">
