--- a/views/login.html
+++ b/views/login.html
@@ -7,7 +7,7 @@
     <meta name="keywords" content="crowdfunding, doação, vaquinha">
     <meta name="keywords" content="Uma plataforma de crowdfunding gratuita feita para você!">
     <link rel="stylesheet" href="../styles/login.css">
-    <script src="../services/userService.js" type="module"></script>
+    <script src="../services/loginService.js" type="module"></script>
 </head>
 <body>
     <!-- NAVBAR -->
@@ -37,20 +37,20 @@
     </div>
 
     <!-- FORMULÁRIO -->
-    <section id="register-form-section">
+    <section id="login-form-section">
         <div id="container-login">
             <h2>Login</h2>
-            <p>Não tem conta? <a href="">Cadastre-se</a></p>
+            <p>Não tem conta? <a href="./register.html">Cadastre-se</a></p>
 
             <form class="submit-form">
                 <div class="form-group">
                     <label>E-mail</label>
-                    <input type="text" id="register-email" required>
+                    <input type="text" id="login-email" required>
                 </div>
 
                 <div class="form-group">
                     <label>Senha</label>
-                    <input type="password" id="register-password" required>
+                    <input type="password" id="login-password" required>
                 </div>
 
                 <div class="form-group" >
