Adicionei a página profile e coloquei a função de excluir os botões de criar conta e login quando o usuário está logado

--- a/styles/campaigns.css
+++ b/styles/campaigns.css
@@ -147,3 +147,11 @@ footer {
     color: #F8F8F8;
     font-size: 13px;
 }
+
+#profile-btn {
+    padding: 0px;
+}
+
+#profile-btn img{
+    height: 42px;
+}
