--- a/views/profile.html
+++ b/views/profile.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <title>AJuDE | Crowdfunding</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="keywords" content="crowdfunding, doação, vaquinha">
     <meta name="keywords" content="Uma plataforma de crowdfunding gratuita feita para você!">
-    <link rel="stylesheet" href="../styles/register.css">
+    <link rel="stylesheet" href="../styles/campaigns.css">
     <script src="../services/userService.js" type="module"></script>
     <script src="../services/authVerification.js" type="module"></script>
 </head>
@@ -30,6 +30,11 @@
                 <li id="create-campaign-btn">
                     <a href="create-campaign.html">lançar campanha</a>
                 </li>
+                <li id="profile-btn">
+                    <a href="profile.html" id="logo-btn">
+                        <img src="../styles/img/profile.png" alt="Profile">
+                    </a>
+                </li>
             </ul>
         </nav>
     </header>
@@ -37,50 +42,14 @@
         <br>
     </div>
 
-    <!-- FORMULÁRIO -->
+    <!-- MEU PERFIL -->
     <section id="register-form-section">
         <div id="container-login">
-            <h2>Faça seu cadastro</h2>
-            <p>* Todos os dados são obrigatórios</p>
-
-            <form class="submit-form">
-                <div class="form-group">
-                    <label>Primeiro nome</label>
-                    <input type="text" id="register-first-name" required>
-                </div>
-
-                <div class="form-group">
-                    <label>Último nome</label>
-                    <input type="text" id="register-last-name" required>
-                </div>
-
-                <div class="form-group">
-                    <label>E-mail</label>
-                    <input type="text" id="register-email" required>
-                </div>
-
-                <div class="form-group">
-                    <label>Nº do cartão de crédito</label>
-                    <input type="text" id="register-creditcard" required>
-                </div>
-
-                <div class="form-group">
-                    <label>Senha</label>
-                    <input type="password" id="register-password" required>
-                </div>
-
-                <div class="form-group">
-                    <label>Confirme a senha</label>
-                    <input type="password" id="register-password-confirm" required>
-                </div>
-
-                <div class="form-group" >
-                    <button class="button" type="submit">Criar conta</button>
-                </div>
-            </form>
+            <h2>Meu perfil</h2>
+            
         </div>
     </section>  
-
+    
     <!-- RODAPÉ -->
     <footer class="center-footer">
         <div class="sub-footer">
