--- a/views/campaigns.html
+++ b/views/campaigns.html
@@ -60,5 +60,28 @@
             </div>
         </div>
     </footer>
+    <script>
+        hideContent();
+
+        /**
+         * Exclui os botões de criar conta e login e cria o de perfil quando o usuário está logado
+         */
+        function hideContent() {
+            let $login = document.querySelector("#login-btn");
+            let $register = document.querySelector("#register-btn");
+            let $profile = document.querySelector("#profile-btn");
+
+            // Usuário está logado
+            if (localStorage.getItem("token") != null) {
+                $login.style.display = "none";
+                $register.style.display = "none";
+                $profile.style.display = "block";
+            } else {
+                $profile.style.display = "none";
+                $login.style.display = "block"
+                $register.style.display = "block"
+            }
+        };
+    </script>
 </body>
 </html>
