--- a/styles/login.css
+++ b/styles/login.css
@@ -134,6 +134,8 @@ h2 {
     border: none;
     padding: 10px 15px;
     font-size: 16px;
+    margin: 0 auto;
+    display: block;
 }
 
 .submit-form button:hover {
