--- a/views/forgot-password.html
+++ b/views/forgot-password.html
@@ -6,9 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="keywords" content="crowdfunding, doação, vaquinha">
     <meta name="keywords" content="Uma plataforma de crowdfunding gratuita feita para você!">
-    <link rel="stylesheet" href="../styles/register.css">
-    <script src="../services/userService.js" type="module"></script>
-    <script src="../services/authVerification.js" type="module"></script>
+    <link rel="stylesheet" href="../styles/login.css">
+    <script src="../services/passwordService.js" type="module"></script>
 </head>
 <body>
     <!-- NAVBAR -->
@@ -43,49 +42,23 @@
     </div>
 
     <!-- FORMULÁRIO -->
-    <section id="register-form-section">
+    <section id="login-form-section">
         <div id="container-login">
-            <h2>Faça seu cadastro</h2>
-            <p>* Todos os dados são obrigatórios</p>
+            <h2>Esqueceu sua senha?</h2>
+            <p>Preencha seu e-mail abaixo para resolver isso.</p>
 
             <form class="submit-form">
                 <div class="form-group">
-                    <label>Primeiro nome</label>
-                    <input type="text" id="register-first-name" required>
-                </div>
-
-                <div class="form-group">
-                    <label>Último nome</label>
-                    <input type="text" id="register-last-name" required>
-                </div>
-
-                <div class="form-group">
                     <label>E-mail</label>
-                    <input type="text" id="register-email" required>
+                    <input type="text" id="form-email" required>
                 </div>
-
                 <div class="form-group">
-                    <label>Nº do cartão de crédito</label>
-                    <input type="text" id="register-creditcard" required>
-                </div>
-
-                <div class="form-group">
-                    <label>Senha</label>
-                    <input type="password" id="register-password" required>
-                </div>
-
-                <div class="form-group">
-                    <label>Confirme a senha</label>
-                    <input type="password" id="register-password-confirm" required>
-                </div>
-
-                <div class="form-group" >
-                    <button class="button" type="submit">Criar conta</button>
+                    <button class="button" type="submit" id="submit-btn">Enviar e-mail de recuperação</button>
                 </div>
             </form>
         </div>
     </section>  
-
+    
     <!-- RODAPÉ -->
     <footer class="center-footer">
         <div class="sub-footer">
