--- a/views/create-campaign.html
+++ b/views/create-campaign.html
@@ -7,7 +7,7 @@
     <meta name="keywords" content="crowdfunding, doação, vaquinha">
     <meta name="keywords" content="Uma plataforma de crowdfunding gratuita feita para você!">
     <link rel="stylesheet" href="../styles/create-campaign.css">
-    <script src="../services/userService.js" type="module"></script>
+    <script src="../services/campaignService.js" type="module"></script>
 </head>
 <body>
     <!-- NAVBAR -->
@@ -61,7 +61,6 @@
     </footer>
     <script>
         hideContent();
-
         /**
          * Exclui os botões de criar conta e login e cria o de perfil quando o usuário está logado
          */
