--- a/styles/index.css
+++ b/styles/index.css
@@ -15,7 +15,7 @@ body {
     padding-top: 20px;
     width: 100%;    
     height: 60px;
-    background-color: #21051F;
+    background-color: #171718;
     opacity: 80%;
     position: fixed;
 }
@@ -67,7 +67,7 @@ body {
 
 #aux-div {
     height: 50px;
-    background-color: #21051F;
+    background-color: #171718;
     padding-top: 30px;
     width: 100%;   
 }
@@ -132,7 +132,7 @@ body {
 
 footer {
     padding: 2px 0;
-    background-color: #21051F;
+    background-color: #171718;
 }
 
 #launch-div button:hover{
