--- a/views/profile.html
+++ b/views/profile.html
@@ -18,7 +18,7 @@
         <nav id="navbar">
             <ul id="navbar-ul">
                 <li id="inicio-btn">
-                    <a href="../index.html">inicio</a>
+                    <a href="index.html">inicio</a>
                 </li>
                 <li id="campaigns-btn"> 
                     <a href="campaigns.html">campanhas</a> 
@@ -49,7 +49,7 @@
         <div id="container-options">
             <h2>Meu perfil</h2>
             <div id="options-div">
-                <a href="../index.html" id="logout-btn">Logout</a>
+                <a href="index.html" id="logout-btn">Logout</a>
             </div>
         </div>
     </section>  
