--- a/views/register.html
+++ b/views/register.html
@@ -16,7 +16,7 @@
         <nav id="navbar">
             <ul id="navbar-ul">
                 <li id="inicio-btn">
-                    <a href="../index.html">inicio</a>
+                    <a href="index.html">inicio</a>
                 </li>
                 <li id="campaigns-btn"> 
                     <a href="campaigns.html">campanhas</a> 
