--- a/views/create-campaign.html
+++ b/views/create-campaign.html
@@ -15,7 +15,7 @@
         <nav id="navbar">
             <ul id="navbar-ul">
                 <li id="inicio-btn">
-                    <a href="../index.html">inicio</a>
+                    <a href="index.html">inicio</a>
                 </li>
                 <li id="campaigns-btn"> 
                     <a href="campaigns.html">campanhas</a> 
@@ -46,11 +46,11 @@
         <div id="container-login">
             <h2>Cadastrar campanha</h2>
             <p>* Todos os dados são obrigatórios</p>
-            
+
             <form class="submit-form">
                 <div class="form-group">
                     <label>Título da campanha</label>
-                    <input type="text" id="campaign-name" required>
+                    <input type="text" id="campaign-name" maxlength="64" required>
                 </div>
 
                 <div class="form-group">
