Start new version

--- a/views/create-campaign.html
+++ b/views/create-campaign.html
@@ -8,6 +8,7 @@
     <meta name="keywords" content="Uma plataforma de crowdfunding gratuita feita para você!">
     <link rel="stylesheet" href="../styles/create-campaign.css">
     <script src="../services/campaignService.js" type="module"></script>
+    <script src="../services/router/router.js" type="module"></script>
 </head>
 <body>
     <!-- NAVBAR -->
