--- a/views/campaigns.html
+++ b/views/campaigns.html
@@ -8,6 +8,7 @@
     <meta name="keywords" content="Uma plataforma de crowdfunding gratuita feita para você!">
     <link rel="stylesheet" href="../styles/campaigns.css">
     <script src="../services/userService.js" type="module"></script>
+    <script src="../services/router/router.js" type="module"></script>
 </head>
 <body>
     <!-- NAVBAR -->
