--- a/views/profile.html
+++ b/views/profile.html
@@ -10,7 +10,7 @@
     <script src="../services/userService.js" type="module"></script>
     <script src="../services/authVerification.js" type="module"></script>
     <script src="../services/logoutService.js" type="module"></script>
-
+    <script src="../services/router/router.js" type="module"></script>
 </head>
 <body>
     <!-- NAVBAR -->
