--- a/views/register.html
+++ b/views/register.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="../styles/register.css">
     <script src="../services/userService.js" type="module"></script>
     <script src="../services/authVerification.js" type="module"></script>
+    <script src="../services/router/router.js" type="module"></script>
 </head>
 <body>
     <!-- NAVBAR -->
