--- a/views/campaigns.html
+++ b/views/campaigns.html
@@ -7,8 +7,7 @@
     <meta name="keywords" content="crowdfunding, doação, vaquinha">
     <meta name="keywords" content="Uma plataforma de crowdfunding gratuita feita para você!">
     <link rel="stylesheet" href="../styles/campaigns.css">
-    <script src="../services/userService.js" type="module"></script>
-    <script src="../services/router/router.js" type="module"></script>
+    
 </head>
 <body>
     <!-- NAVBAR -->
@@ -42,10 +41,14 @@
         <br>
     </div>
 
-    <!-- FORMULÁRIO -->
-    <section id="register-form-section">
-        <div id="container-login">
-            <h2>Campanhas</h2>
+    <!-- CAMPANHAS ATIVAS -->
+    <section id="campaigns-list-section">
+        <div id="container-campaigns">
+            <h2>Campanhas ativas</h2>
+            
+            <div id="campaigns-list">
+                
+            </div>
             
         </div>
     </section>  
