--- a/views/profile.html
+++ b/views/profile.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="keywords" content="crowdfunding, doação, vaquinha">
     <meta name="keywords" content="Uma plataforma de crowdfunding gratuita feita para você!">
-    <link rel="stylesheet" href="../styles/campaigns.css">
+    <link rel="stylesheet" href="../styles/profile.css">
     <script src="../services/userService.js" type="module"></script>
     <script src="../services/logoutService.js" type="module"></script>
 </head>
@@ -47,7 +47,19 @@
         <div id="container-options">
             <h2>Meu perfil</h2>
             <div id="options-div">
-                <a href="index.html" id="logout-btn">Logout</a>
+                <nav id="options-navbar">
+                    <ul>
+                        <li>
+                            <a href="#" id="my-data-btn">Meus dados</a>
+                        </li>
+                        <li>
+                            <a href="#" id="my-campaigns-btn">Minhas campanhas</a>
+                        </li>  
+                        <li>
+                            <a href="index.html" id="logout-btn">Logout</a>
+                        </li>
+                    </ul>
+                </nav>
             </div>
         </div>
     </section>  
