--- a/views/login.html
+++ b/views/login.html
@@ -61,7 +61,7 @@
                     <a href="forgot-password.html">Esqueci minha senha</a>
                 </div>
                 <div class="form-group" >
-                    <button class="button" type="submit">Criar conta</button>
+                    <button class="button" type="submit">Login</button>
                 </div>
             </form>
         </div>
