--- a/views/campaigns.html
+++ b/views/campaigns.html
@@ -41,13 +41,24 @@
         <br>
     </div>
 
-    <!-- CAMPANHAS ATIVAS -->
+    <!-- CAMPANHAS -->
     <section id="campaigns-list-section">
         <div id="container-campaigns">
-            <h2>Campanhas ativas</h2>
+            <h2>Buscar campanha</h2>
             
-            <div id="campaigns-list">
-                
+            <div id="campaigns-search">
+                <form id="campaign-form">
+                    <input type="text" id="search-value" placeholder="Estou procurando por...">
+                    <button id="search-btn">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="24" 
+                            height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" 
+                            stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
+                            >
+                            <circle cx="11" cy="11" r="8"></circle>
+                            <line x1="21" y1="21" x2="16.65" y2="16.65"></line>
+                            </svg>
+                    </button>
+                </form>     
             </div>
             
         </div>
