--- a/views/index.html
+++ b/views/index.html
@@ -55,7 +55,7 @@
 
     <!-- CAMPANHAS ATIVAS -->
     <section id="campaigns-section">
-        <h2>Campanhas</h2>
+        <h2>Campanhas ativas</h2>
     </section>
 
     <!-- RODAPÉ -->
