--- a/views/register.html
+++ b/views/register.html
@@ -65,7 +65,7 @@
 
                 <div class="form-group">
                     <label>Nº do cartão de crédito</label>
-                    <input type="text" id="register-creditcard" required>
+                    <input type="number" id="register-creditcard" required>
                 </div>
 
                 <div class="form-group">
