--- a/styles/index.css
+++ b/styles/index.css
@@ -16,6 +16,7 @@ body {
     width: 100%;    
     height: 60px;
     background-color: #171718;
+    background: linear-gradient(to right, #000, #171718) no-repeat 0 0 / cover;
     opacity: 80%;
     position: fixed;
 }
@@ -120,6 +121,8 @@ body {
 }
 
 #launch-div button{
+    cursor: pointer;
+    background-color: #F8F8F8;
     font-size: 22px;
     text-transform: uppercase;
     position: inherit;
@@ -136,7 +139,7 @@ footer {
 }
 
 #launch-div button:hover{
-    background-color: #CCC;
+    background-color: #e5e8fa;
 }
 
 #text-footer {
