--- a/styles/login.css
+++ b/styles/login.css
@@ -24,6 +24,7 @@ h2 {
     width: 100%;    
     height: 60px;
     background-color: #4a8fda;
+    background: linear-gradient(to right, #39409E, #4a8fda) no-repeat 00 / cover;
     opacity: 100%;
     position: absolute;
 }
@@ -129,6 +130,7 @@ h2 {
 }
 
 .submit-form button {
+    cursor: pointer;
     background-color: #4a8fda;
     color: #F8F8F8;
     border: none;
