--- a/styles/profile.css
+++ b/styles/profile.css
@@ -25,6 +25,7 @@ h2 {
     width: 100%;    
     height: 60px;
     background-color: #4a8fda;
+    background: linear-gradient(to right, #39409E, #4a8fda) no-repeat 00 / cover;
     opacity: 80%;
     position: fixed;
 }
@@ -81,38 +82,56 @@ h2 {
     width: 100%;   
 }
 
-#container-options {
-    margin: 3% 15%;
-    background-color: #E8E8E8;
-}
 
-#options-navbar ul {
+#logout-div button{
+    cursor: pointer;
     display: flex;
-    justify-content: center;
+    margin: 0 0 0 auto;
+    padding: 10px 10px;
+    font-size: 18px;
+    color: #F8F8F8;
+    background-color: rgb(216, 76, 76);
+    border-style: none;
+}
+
+#logout-div button:hover{
+    background-color: rgb(189, 63, 63);
+}
+
+#logout-div img {
+    margin-left: 5px; 
+}
+
+#container {
+    margin: 1% 15% 0px 15%;
+    border-top-left-radius: 5px;
+    border-top-right-radius: 5px;
+    
+}
+
+#my-data-section {
+    margin: 2% 15%;
+    padding-top: 30px 10px;
+    background-color: #FEFEFE;
+    border-radius: 3px;
+    box-shadow: 0px -1px 3px #DDD;
+}
+
+#my-data-section ul{
     list-style: none;
-    border-top: 7px solid #F8F8F8;
+    color: #39409E;
 }
 
-#options-navbar ul li{
-    background-color: #E8E8E8;
-    display: inline;
-    margin: 5px 30px;
-    font-style: normal;
-    text-decoration: none;
-    list-style: none;
+#my-data-div{
+    padding: 5% 10%;
 }
 
-#options-navbar a {
-    text-decoration: none;
-    color: #444;
-}
-
-#options-navbar a:hover {
-    border-bottom: 1.6px solid #444;
-}
-
-#options-navbar a:visited {
-    color: #444;
+#my-campaigns-section {
+    margin: 2% 15%;
+    padding-top: 30px 10px;
+    background-color: #FEFEFE;
+    border-radius: 3px;
+    box-shadow: 0px -1px 3px #DDD;
 }
 
 footer {
