--- a/styles/register.css
+++ b/styles/register.css
@@ -23,6 +23,7 @@ h2 {
     width: 100%;    
     height: 60px;
     background-color: #4a8fda;
+    background: linear-gradient(to right, #39409E, #4a8fda) no-repeat 00 / cover;
     opacity: 100%;
     position: absolute;
 }
@@ -105,13 +106,14 @@ h2 {
     color: #666;
 }
 
-.submit-form input[type="text"], input[type="password"] {
+.submit-form input[type="text"], input[type="password"], input[type="number"]{
     padding: 7px;
     width: 100%;
     margin-bottom: 5px;
 }
 
 .submit-form button {
+    cursor: pointer;
     background-color: #4a8fda;
     color: #F8F8F8;
     border: none;
